[workspace]
resolver = "3"
members = [
    "tansu",
    "tansu-broker",
    "tansu-cat",
    "tansu-cli",
    "tansu-client",
    "tansu-generator",
    "tansu-model",
    "tansu-otel",
    "tansu-proxy",
    "tansu-sans-io",
    "tansu-schema",
    "tansu-service",
    "tansu-storage",
    "tansu-topic",
]

[workspace.package]
edition = "2024"
version = "0.5.7"
license = "Apache-2.0"
homepage = "https://tansu.io"
repository = "https://github.com/tansu-io/tansu"
keywords = ["deltalake", "iceberg", "kafka", "postgres", "s3"]
authors = ["Peter Morgan <peter.morgan@tansu.io>"]
include = [
    "Cargo.toml",
    "LICENSE",
    "benches/*.rs",
    "build.rs",
    "message/*.json",
    "src/**/*.avsc",
    "src/**/*.json",
    "src/**/*.proto",
    "src/**/*.rs",
    "src/**/*.sql",
    "tests",
]

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
deprecated_in_future = "warn"
elided_lifetimes_in_paths = "deny"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_import_braces = "warn"
unused_labels = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
unused_results = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"

[workspace.dependencies]
anyhow = "1.0.94"
apache-avro = "0.17.0"
arrow = { version = "55" }
assert_matches = "1.5.0"
async-trait = "0.1.86"
backoff = {version = "0.4.0", features = ["tokio"]}
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
clap = { version = "4.5.32", features = ["derive", "env"] }
condtype = "1.3.0"
convert_case = "0.8.0"
crc = "3.0.1"
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }
datafusion = "47"
deadpool = "0.12.2"
deadpool-postgres = "0.14.1"
delta_kernel = "0.10.0"
deltalake = { version = "0.26", features = ["datafusion", "s3"] }
dotenv = "0.15.0"
fake = "4.3.0"
flate2 = "1.0"
futures = "0.3"
futures-core = "0.3.31"
futures-util = "0.3.31"
getrandom = "0.3"
glob = "0.3.2"
governor = "0.10.0"
http-body-util = "0.1"
human-units = {version = "0.5.3", features = ["iec-units"]}
humantime = "2.2.0"
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
iceberg = "0.6"
iceberg-catalog-rest = "0.6"
iceberg-datafusion = "0.6"
jsonschema = "0.26.2"
lazy_static = "1.4.0"
libsql = { version = "0.9.18", default-features = false, features = ["core"] }
lz4 = "1.28.1"
nonzero_ext = "0.3.0"
num-bigint = "0.4"
object_store = { version = "0.12.3", features = ["aws"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["testing"] }
ordered-float = "4.6"
parquet = "55"
pretty_assertions = "1"
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
protobuf-json-mapping = "3.7.1"
protobuf-parse = "3.7.1"
protobuf = { version = "3.7.1", features = ["with-bytes"] }
quote = "1.0"
rama = { version = "0.2.0", features = ["http", "tcp"] }
rand = "0.9"
regex = "1.11.1"
rhai = { version = "1.22.2", features = ["sync"] }
rhai-rand = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snap = "1.1.1"
syn = { version = "2.0", features = ["full"] }
tansu = { version = "0.5.7", path = "tansu", default-features = false }
tansu-broker = { version = "0.5.7", path = "tansu-broker", default-features = false }
tansu-cat = { version = "0.5.7", path = "tansu-cat", default-features = false }
tansu-cli = { version = "0.5.7", path = "tansu-cli", default-features = false }
tansu-client = { version = "0.5.7", path = "tansu-client", default-features = false }
tansu-generator = { version = "0.5.7", path = "tansu-generator", default-features = false }
tansu-model = { version = "0.5.7", path = "tansu-model", default-features = false }
tansu-otel = { version = "0.5.7", path = "tansu-otel", default-features = false }
tansu-proxy = { version = "0.5.7", path = "tansu-proxy", default-features = false }
tansu-sans-io = { version = "0.5.7", path = "tansu-sans-io", default-features = false }
tansu-schema = { version = "0.5.7", path = "tansu-schema", default-features = false }
tansu-service = { version = "0.5.7", path = "tansu-service", default-features = false }
tansu-storage = { version = "0.5.7", path = "tansu-storage", default-features = false }
tansu-topic = { version = "0.5.7", path = "tansu-topic", default-features = false }
tempfile = "3"
thiserror = "2.0"
time = { version = "0.3.37", features = ["formatting", "macros"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio = { version = "1", features = ["full", "test-util"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-serde_json-1",
    "with-uuid-1",
] }
tracing = "0.1"
tracing-core = { version = "0.1" }
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
turso = "0.1.4"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.13.2", features = ["serde", "v4", "v7"] }
zstd = "0.13.2"

[profile.release]
codegen-units = 1
lto = "thin"
