[package]
name = "tansu-auth"
description = "Tansu Auth"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
rama.workspace = true
rsasl.workspace = true
tansu-sans-io.workspace = true
tansu-storage.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
