[package]
name = "tansu-broker"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

# [lints]
# workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
deadpool-postgres.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
jsonschema.workspace = true
object_store.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-model = { version = "0.4.1", path = "../tansu-model" }
tansu-sans-io = { version = "0.4.1", path = "../tansu-sans-io" }
tansu-schema = { version = "0.4.1", path = "../tansu-schema" }
tansu-storage = { version = "0.4.1", path = "../tansu-storage" }
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
nightly-features = []
