[package]
name = "tansu-broker"
description = "Tansu Kafka API compatible broker"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
deadpool-postgres.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
jsonschema.workspace = true
libsql.workspace = true
object_store.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-model.workspace = true
tansu-sans-io.workspace = true
tansu-schema.workspace = true
tansu-storage.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
nightly-features = []
