[package]
name = "tansu-cat"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
serde_json.workspace = true
tansu-kafka-sans-io = { path = "../tansu-kafka-sans-io" }
tansu-schema-registry = { path = "../tansu-schema-registry" }
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
