[package]
name = "tansu-cat"
edition.workspace = true
version = "0.4.3"
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
serde_json.workspace = true
tansu-sans-io = { version = "0.4.3", path = "../tansu-sans-io" }
tansu-schema = { version = "0.4.3", path = "../tansu-schema" }
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
