[package]
name = "tansu-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
clap.workspace = true
dotenv.workspace = true
regex.workspace = true
tansu-cat = { path = "../tansu-cat" }
tansu-generator = { path = "../tansu-generator" }
tansu-sans-io = { path = "../tansu-sans-io" }
tansu-proxy = { path = "../tansu-proxy" }
tansu-schema = { path = "../tansu-schema" }
tansu-broker = { path = "../tansu-broker" }
tansu-storage = { path = "../tansu-storage" }
tansu-topic = { path = "../tansu-topic" }
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
