[package]
name = "tansu-cli"
edition.workspace = true
version = "0.4.3"
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
dotenv.workspace = true
regex.workspace = true
tansu-cat = { version = "0.4.3", path = "../tansu-cat" }
tansu-generator = { version = "0.4.3", path = "../tansu-generator" }
tansu-sans-io = { version = "0.4.3", path = "../tansu-sans-io" }
tansu-proxy = { version = "0.4.3", path = "../tansu-proxy" }
tansu-schema = { version = "0.4.3", path = "../tansu-schema" }
tansu-broker = { version = "0.4.3", path = "../tansu-broker" }
tansu-storage = { version = "0.4.3", path = "../tansu-storage" }
tansu-topic = { version = "0.4.3", path = "../tansu-topic" }
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
