[package]
name = "tansu-cli"
description = "Tansu CLI"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
default = []
delta = []
dynostore = []
iceberg = []
libsql = []
parquet = []
postgres = []
slatedb = []
turso = []

[dependencies]
clap.workspace = true
dotenv.workspace = true
human-units.workspace = true
humantime.workspace = true
regex.workspace = true
tansu-broker.workspace = true
tansu-cat.workspace = true
tansu-generator.workspace = true
tansu-perf.workspace = true
tansu-proxy.workspace = true
tansu-sans-io.workspace = true
tansu-schema.workspace = true
tansu-storage.workspace = true
tansu-topic.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
