[package]
name = "tansu-client"
description = "A Service/Layer based Kafka client"
edition.workspace = true
version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
authors.workspace = true
include.workspace = true

[dependencies]
bytes.workspace = true
deadpool.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
rama.workspace = true
tansu-sans-io.workspace = true
tansu-service.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true

[lints]
workspace = true
