[package]
name = "tansu-generator"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
governor.workspace = true
nonzero_ext.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rama.workspace = true
serde_json.workspace = true
tansu-otel = { path = "../tansu-otel" }
tansu-sans-io = { path = "../tansu-sans-io" }
tansu-schema = { path = "../tansu-schema" }
tansu-service = { path = "../tansu-service" }
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
