[package]
name = "tansu-generator"
edition.workspace = true
version = "0.4.1"
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
governor.workspace = true
nonzero_ext.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rama.workspace = true
serde_json.workspace = true
tansu-otel = { version = "0.4.1", path = "../tansu-otel" }
tansu-sans-io = { version = "0.4.1", path = "../tansu-sans-io" }
tansu-schema = { version = "0.4.1", path = "../tansu-schema" }
tansu-service = { version = "0.4.1", path = "../tansu-service" }
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
