[package]
name = "tansu-generator"
description = "Generate fake data for schema backed topics"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
governor.workspace = true
nonzero_ext.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rama.workspace = true
serde_json.workspace = true
tansu-client.workspace = true
tansu-otel.workspace = true
tansu-sans-io.workspace = true
tansu-schema.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
