[package]
name = "tansu-kafka-model"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case.workspace = true
lazy_static.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
syn.workspace = true
tracing.workspace = true
