[package]
name = "tansu-model"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

# [lints]
# workspace = true

[dependencies]
convert_case.workspace = true
lazy_static.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
syn.workspace = true
tracing.workspace = true
