[package]
name = "tansu-model"
edition.workspace = true
version = "0.4.3"
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
convert_case.workspace = true
lazy_static.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
syn.workspace = true
tracing.workspace = true
