[package]
name = "tansu-model"
description = "Kafka JSON protocol definitions, bootstrapping Tansu sans I/O"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
convert_case.workspace = true
lazy_static.workspace = true
proc-macro2.workspace = true
quote.workspace = true
regex.workspace = true
serde_json.workspace = true
serde.workspace = true
syn.workspace = true
tracing.workspace = true
