[package]
name = "tansu-otel"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
