[package]
name = "tansu-otel"
description = "Tansu OTEL common configuration"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
