[package]
name = "tansu-proxy"
edition.workspace = true
version = "0.4.2"
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rama.workspace = true
tansu-otel = { version = "0.4.2", path = "../tansu-otel" }
tansu-sans-io = { version = "0.4.2", path = "../tansu-sans-io" }
tansu-service = { version = "0.4.2", path = "../tansu-service" }
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
