[package]
name = "tansu-raft"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true


[dependencies]
async-trait.workspace = true
bytes.workspace = true
crc.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-varint = { path = "../tansu-varint" }
tarpc.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
clap.workspace = true
tracing-subscriber.workspace = true
typetag.workspace = true

[[example]]
name = "in-memory-server"